fix a large number of context menu and bookmark info bugs and cleanup the code. see http://bugzilla.mozilla.org/show_bug.cgi?id=245710#c11 for a comprehensive list (bug 245710)