camino/src/bookmarks/BookmarkManager.h
@@ -21,6 +21,7 @@
 *
 * Contributor(s):
 *    David Haas <haasd@cae.wisc.edu>
+*    Josh Aas <josha@mac.com>
 * 
 *
 * Alternatively, the contents of this file may be used under the terms of
@@ -46,9 +47,11 @@
 @class KindaSmartFolderManager;
 @class RunLoopMessenger;
 
-#define kBookmarkMenuContainerIndex 0
-#define kToolbarContainerIndex 1
-#define kHistoryContainerIndex 2
+enum {
+  kBookmarkMenuContainerIndex = 0,
+  kToolbarContainerIndex = 1,
+  kHistoryContainerIndex = 2,
+};
 
 // check 1 bookmark every 2 minutes, but only if we haven't been there in a day
 #define kTimeBeforeRecheckingBookmark 86400.0
