camino/src/bookmarks/BookmarkManager.mm
@@ -481,7 +481,7 @@ static unsigned gFirstUserCollection = 0;
   NSString * menuTitle;
   
   // open in new window
-  if (isFolder || (outlineView && ([outlineView numberOfSelectedRows] > 1)))
+  if (isFolder)
     menuTitle = NSLocalizedString(@"Open Tabs in New Window", @"");
   else
     menuTitle = NSLocalizedString(@"Open in New Window", @"");
@@ -490,7 +490,7 @@ static unsigned gFirstUserCollection = 0;
   [contextMenu addItem:menuItem];
   
   // open in new tab
-  if (isFolder || ([outlineView numberOfSelectedRows] > 1))
+  if (isFolder)
     menuTitle = NSLocalizedString(@"Open in New Tabs", @"");
   else
     menuTitle = NSLocalizedString(@"Open in New Tab", @"");
@@ -530,7 +530,11 @@ static unsigned gFirstUserCollection = 0;
   }
   
   id parent = [item parent];
-  if ([parent isKindOfClass:[BookmarkFolder class]] && ![parent isSmartFolder]) {
+  // if we're not in a smart collection (other than history)
+  if (!outlineView ||
+      ![target isKindOfClass:[BookmarkViewController class]] ||
+      ![[target activeCollection] isSmartFolder] ||
+      ([target activeCollection] == [self historyFolder])) {
     // space
     [contextMenu addItem:[NSMenuItem separatorItem]];
     // delete
