camino/src/bookmarks/BookmarkViewController.h
@@ -103,6 +103,7 @@
 -(void) restoreFolderExpandedStates;
 -(BOOL) isExpanded:(id)anItem;
 -(BOOL) haveSelectedRow;
+-(int)numberOfSelectedRows;
 -(void) setItem:(BookmarkFolder *)anItem isExpanded:(BOOL)aBool;
 -(void) setActiveCollection:(BookmarkFolder *)aFolder;
 -(BookmarkFolder *)activeCollection;
