camino/src/browser/BrowserWindowController.mm
@@ -1766,13 +1766,18 @@ static NSArray* sToolbarDefaults = nil;
   [mBookmarkViewController addItem: self isFolder: aIsFolder URL:aURL title:aTitle];
 }
 
-- (BOOL)bookmarksAreVisible:(BOOL)inRequireSelection
+// if bookmarks are visible, but say no if selection required and there isn't one
+// if bookmarks aren't visible, or selection not required, then value for allowMultipleSelection is ignored
+- (BOOL)bookmarksAreVisible:(BOOL)inRequireSelection allowMultipleSelection:(BOOL)allowMultipleSelection
 {
   BOOL bookmarksShowing = [mContentView isBookmarkManagerVisible];
-            
-  if (inRequireSelection)
-    bookmarksShowing &= ([mBookmarkViewController haveSelectedRow]);
-  
+  // trying to make this logic as clear as possible
+  if (bookmarksShowing && inRequireSelection) {
+    bookmarksShowing = [mBookmarkViewController haveSelectedRow];
+    if (bookmarksShowing && !allowMultipleSelection) {
+      bookmarksShowing = [mBookmarkViewController numberOfSelectedRows] <= 1;
+    }
+  }
   return bookmarksShowing;
 }
 
@@ -2581,7 +2586,7 @@ static NSArray* sToolbarDefaults = nil;
 
 - (BOOL)canGetInfo
 {
-  return [self bookmarksAreVisible:YES];
+  return [self bookmarksAreVisible:YES allowMultipleSelection:NO];
 }
 
 - (BOOL)shouldShowBookmarkToolbar
